projects/core/components/data-list/data-list.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';

tui-data-list {
    --tui-data-list-padding: 0.25rem;
    --tui-data-list-margin: 0.0625rem;

    display: flex;
    font: var(--tui-font-text-m);
    flex-direction: column;
    padding: calc(var(--tui-data-list-padding) - var(--tui-data-list-margin)) var(--tui-data-list-padding);
    color: var(--tui-text-tertiary);

    &:focus-within {
        .t-trap {
            display: none;
        }

        [tuiOption]._with-dropdown:not(:focus) {
            background-color: transparent;
        }
    }

    &[data-size='s'] {
        // StackBlitz changes "0rem" to "0" breaking calc
        --tui-data-list-margin: ~'0rem';

        // TODO(v5): use `gap`
        [tuiOption][new] > *:not(:first-child) {
            margin-inline-start: 0.5rem;
        }

        & > .t-empty,
        [tuiOption] {
            --t-option-padding-inline: 0.5rem;

            font: var(--tui-font-text-s);
            min-block-size: 2rem;
            // TODO: use padding-block after Safari 14+
            padding-top: 0.3125rem;
            padding-bottom: 0.3125rem;

            &::before {
                font-size: 1rem;
            }
        }
    }

    &[data-size='m'] {
        // TODO(v5): use `gap`
        [tuiOption][new] > *:not(:first-child) {
            margin-inline-start: 0.75rem;
        }

        & > .t-empty,
        [tuiOption] {
            --t-option-padding-inline: 0.5rem;

            font: var(--tui-font-text-s);
            min-block-size: 2.5rem;
            // TODO: use padding-block after Safari 14+
            padding-top: 0.375rem;
            padding-bottom: 0.375rem;
        }
    }

    &[data-size='l'] {
        --tui-data-list-padding: 0.375rem;
        --tui-data-list-margin: 0.125rem;

        // TODO(v5): use `gap`
        [tuiOption][new] > *:not(:first-child) {
            margin-inline-start: 1rem;
        }

        & > .t-empty,
        [tuiOption] {
            --t-option-padding-inline: 0.625rem;

            font: var(--tui-font-text-m);
            min-block-size: 2.75rem;
            // TODO: use padding-block after Safari 14+
            padding-top: 0.375rem;
            padding-bottom: 0.375rem;
        }
    }

    & > .t-empty {
        display: flex;
        align-items: center;
        box-sizing: border-box;
        margin: var(--tui-data-list-margin) 0;
    }

    [tuiOption]:not([new]) {
        justify-content: space-between;
    }

    [tuiOption] {
        .button-clear();
        .transition(background);

        display: flex;
        align-items: center;
        box-sizing: border-box;
        margin: var(--tui-data-list-margin) 0;
        text-align: start;
        color: var(--tui-text-primary);
        border-radius: var(--tui-radius-s);
        outline: none;
        cursor: pointer;
        background-clip: padding-box;

        &:disabled {
            opacity: var(--tui-disabled-opacity);
            cursor: default;
        }

        &:hover:not(:disabled),
        &:focus-within,
        &._with-dropdown {
            background-color: var(--tui-background-neutral-1);
        }

        &::before {
            margin-inline-end: 0.5rem;
        }

        &::after {
            font-size: 1rem;
            margin: 0 -0.75rem 0 auto;
            border-left: 0.5rem solid;
            border-right: 0.5rem solid;
        }
    }

    & > .t-empty,
    [tuiOption] {
        // TODO: use padding-inline after Safari 14+
        padding-left: var(--t-option-padding-inline);
        padding-right: var(--t-option-padding-inline);
    }
}

tui-opt-group {
    position: relative;
    display: flex;
    font: var(--tui-font-text-xs);
    font-weight: bold;
    color: var(--tui-text-primary);
    flex-direction: column;
    line-height: 1rem;

    tui-data-list[data-size='l'] & {
        font: var(--tui-font-text-s);
        font-weight: bold;
        line-height: 1.25rem;

        &::before {
            padding-left: 0.625rem;
            padding-right: 0.625rem;
        }

        &::after {
            left: 0.625rem;
            right: 0.625rem;
        }
    }

    &:empty::before,
    &:empty::after {
        display: none;
    }

    &::before {
        content: attr(data-label);
        padding: var(--tui-data-list-padding) 0.5rem var(--tui-data-list-padding);
        margin: var(--tui-data-list-margin) 0;
        white-space: normal;
        word-break: break-word;
    }

    &::after {
        position: absolute;
        left: 0.5rem;
        right: 0.5rem;
        top: var(--tui-data-list-padding);
        block-size: 1px;
        background: var(--tui-border-normal);
    }

    &:not(:empty) ~ & {
        &::before {
            padding-top: calc(0.75rem + var(--tui-data-list-padding));
        }

        &[data-label='']::before,
        &:not([data-label])::before {
            padding: var(--tui-data-list-padding) 0;
        }

        &::after {
            content: '';
        }
    }

    &[data-label='']::before,
    &:not([data-label])::before {
        content: '';
        padding: 0;
        margin: 0;
    }
}

